fixed gap

--- a/public/style.css
+++ b/public/style.css
@@ -284,6 +284,7 @@ a:focus, a:hover {
 .top-right button{
     line-height: 10px;
     padding: 7px;
+    padding-bottom: 8.2px;
     padding-top: 4.8px;
     padding-right: 9.2px;
     /* position: relative; */
